fix header on mobile

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -19,28 +19,11 @@
       aspect-ratio: 3 / 1;
     }
     @media (max-width: 600px) {
-      aspect-ratio: 2 / 1;
+      aspect-ratio: 3 / 1;
     }
   }
   .header-name {
-    position: fixed;
-    z-index: 2;
-    left: 2.5%;
-    top: calc(100vw * 175 / 1440 * 0.72);
-    color: #fff;
-    font-family: Georgia, Times, "Times New Roman", serif;
-    font-size: 1.6vw;
-    line-height: 1;
-    pointer-events: none;
-
-    @media (max-width: 900px) {
-      font-size: 3vw;
-      top: calc(100vw / 3 * 0.72);
-    }
-    @media (max-width: 600px) {
-      font-size: 4vw;
-      top: calc(100vw / 2 * 0.72);
-    }
+    display: none;
   }
   #fullscreen-btn {
     position: fixed;
@@ -94,6 +77,13 @@ img.buffer {
   opacity: 0;
   width:100%;
   pointer-events: none;
+
+  @media (max-width: 900px) {
+    aspect-ratio: 3 / 1;
+  }
+  @media (max-width: 600px) {
+    aspect-ratio: 5 / 2;
+  }
 }
 
 #header {
